# task-tracker

./: .coveragerc  .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yml
config/: settings.py  urls.py
employees/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
employees/migrations/: 0001_initial.py  0002_remove_employee_first_name_remove_employee_last_name.py
fixtures/: data.json
tasks/: admin.py  apps.py  models.py  paginators.py  serializers.py  services.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
